Feat(Meditation Player) + fixed chat message widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,9 @@ dependencies:
   lottie: ^3.0.0
   flutter_launcher_icons: ^0.13.1
   gap: ^3.0.1
-
+  # audioplayers: ^5.2.1
   percent_indicator: ^4.2.3
+  just_audio: ^0.9.36
 
 flutter_native_splash:
   color: "#F7F4F2"
