--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ flutter_native_splash:
   ios: false
   android_12:
     color: "#F7F4F2"
-    image: assets/images/logosplash.png
+    image: assets/images/logo4.png
 
 flutter_icons:
   image_path: "assets/images/logo.png"
