--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ flutter_native_splash:
   android_12:
     color: "#F7F4F2"
     image: assets/images/logo4.png
+    color_dark: "#F7F4F2"
 
 flutter_icons:
   image_path: "assets/images/logo.png"
