--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   # audioplayers: ^5.2.1
   percent_indicator: ^4.2.3
   just_audio: ^0.9.36
+  http: ^1.2.0
+  firebase_auth: ^4.17.4
+  firebase_core: ^2.25.4
+  another_flushbar: ^1.12.30
 
 flutter_native_splash:
   color: "#F7F4F2"
