Feat(ChatBotScreen): made chatbot with Webview as iframe

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_auth: ^4.17.4
   firebase_core: ^2.25.4
   another_flushbar: ^1.12.30
+  webview_flutter: ^4.7.0
 
 flutter_native_splash:
   color: "#F7F4F2"
